[package]
name = "host-namespaces-psp"
version = "1.0.3"
authors = ["Kubewarden developers <cncf-kubewarden-maintainers@lists.cncf.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
k8s-openapi = { version = "0.25.0", features = ["v1_33"] }
kubewarden-policy-sdk = { version = "0.14.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
rstest = "0.26"
